# spineldb

./: .dockerignore  .gitignore  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PROJECT_HIGHLIGHTS.md  README.md  ROADMAP.md  build.rs  docker-compose.yml  docusaurus.config.js  install.sh  package-lock.json  package.json  sidebars.js
benches/: command_bench.rs  concurrent_bench.rs  memory_bench.rs  mod.rs
docs/: 00-command-reference.md  01-installation-and-setup.md  02-core-data-types.md  03-native-json.md  04-geospatial.md  04a-manual-caching-swr.md  04b-declarative-caching-proxy.md  04c-tag-based-invalidation.md  04d-on-disk-caching.md  04e-content-negotiation-vary.md  05-caching.md  05-replication.md  06-replication.md  07-clustering.md  08-security-acl.md  08-warden-failover.md  09-security-acl.md  10-lua-scripting.md  11-transactions.md  12-introspection-and-monitoring.md  12-pubsub.md  13-introspection-and-monitoring.md  13-persistence-and-backup.md  14-persistence-and-backup.md  14-troubleshooting.md  15-troubleshooting.md  16-bloom-filter.md  17-hyperloglog.md  DEPLOYMENT.md  README.md
examples/: config.toml.example  example.config.toml  example.warden.toml  nodes.conf.example  warden.toml.example
src/: config.rs  lib.rs  main.rs
styles/: custom.css
tests/: README.md  hyperloglog_test.rs  integration_test.rs  property_test.rs  unit_acl_test.rs  unit_append_test.rs  unit_asking_test.rs  unit_auth_test.rs  unit_bgrerewriteaof_test.rs  unit_bgsave_test.rs  unit_bitcount_test.rs  unit_bitpos_test.rs  unit_bloom_filter_test.rs  unit_bloom_test.rs  unit_cache_proxy_test.rs  unit_client_test.rs  unit_command_cmd_test.rs  unit_config_test.rs  unit_dbsize_test.rs  unit_decr_test.rs  unit_decrby_test.rs  unit_del_test.rs  unit_echo_test.rs  unit_eval_test.rs  unit_evalsha_test.rs  unit_exists_test.rs  unit_expire_variants_test.rs  unit_flushall_test.rs  unit_flushdb_test.rs  unit_get_test.rs  unit_getbit_test.rs  unit_getdel_test.rs  unit_getrange_test.rs  unit_getset_test.rs  (+41 more)
(+437 files in other folders)
